# labsea-project

./: .buildinfo  .gitignore  LICENSE  README.md  demo-output.html  desktop.ini  faq.html  genindex.html  gitcollab.html  github.html  gitorg.html  index.html  installation.html  objects.inv  py-modindex.html  pypi-publish.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  template_project.html
.github/workflows/: docs.yml  docs_deploy.yml  tests.yml
_modules/: index.html
_modules/template_project/: plotters.html  tools.html  writers.html
_sources/: demo-output.ipynb.txt  template_project.rst.txt
demo data/: coordinates_AR7W_xstart190.npy  coordinates_AR7W_xstart195.npy  coordinates_AR7W_xstart200.npy  coordinates_AR7W_xstart201.npy  coordinates_AR7W_xstart202.npy  coordinates_AR7W_xstart203.npy  coordinates_AR7W_xstart204.npy  coordinates_AR7W_xstart205.npy  corrected_topography.npy  yomaha_velocities_referenced_to_1000dbar_new.nc
docs/source/: conf.py  index.rst  installation.md
labsea-env/: pyvenv.cfg
labsea-env/Scripts/: activate  activate.bat  jsonpointer
labsea_project/: calc_weighted_mean.py  calc_weighted_mean_old.py  my_readers.py  plotters.py  readers.py  reference_func.py  sort_profile_numbers_mask.py  tools.py  utilities.py  writers.py
notebooks/: baukasten.ipynb  demo.ipynb  max_transport_values.csv  plotting.ipynb  plotting_old.ipynb
scripts/: argo_data_processing.py  calc_weighted_mean.py
template_project/: _version.py  utilities.py
tests/: test_tools.py
