[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "labsea-project"
description = "Analysis of Labrador Sea Overturning derived by argo float data"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Katja Schultz", email = "schultzkatja@gmx.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]

[tool.setuptools]
packages = [
  "labsea_project",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "labsea_project/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
local_scheme = "no-local-version"

[tool.check-manifest]
ignore = [
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]
